--- a/microblog/pubspec.yaml
+++ b/microblog/pubspec.yaml
@@ -21,17 +21,34 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^1.0.0
+  carousel_slider: ^1.3.0
+  cookie_jar: ^1.0.1
+  dio: ^2.1.13
   flutter:
     sdk: flutter
+  flutter_redux: ^0.5.3
+  image_picker: ^0.6.0+15
+  json_annotation: ^2.4.0
+  logging: ^0.11.3+2
+  meta: ^1.1.6
+  package_info: ^0.4.0+4
+  video_player: ^0.10.1+4
+  redux: ^3.0.0
+  redux_logging: ^0.3.0
+  redux_persist: ^0.8.2
+  redux_persist_flutter: ^0.8.1
+  redux_thunk: ^0.2.1
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+dependency_overrides:
+  path_provider: ^1.1.2
 
 dev_dependencies:
+  build_runner: ^1.6.1
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.0.0
+  flutter_launcher_icons: ^0.7.2+1  	
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
